--- a/src/main/checkpoint-frontend/src/styles.css
+++ b/src/main/checkpoint-frontend/src/styles.css
@@ -27,4 +27,10 @@ hr {
     margin-top: 0;
 }
 
+@media (max-width: 992px) {
 
+    body {
+        padding-top: 6px;
+    }
+
+}
